2006-03-30  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixes unexpected empty menu on windows (untested)

	* src/gcompris/board.c: (init_plugins):
	* src/gcompris/gameutil.c: (gcompris_board_has_activity),
	(gcompris_get_menulist):

2006-03-30  Yves Combe  <yves@ycombe.net>

	board was not reinitialised correctly after first use.

	* src/boards/memory.c: (start_board):

2006-03-30  Bruno coudoin  <bruno.coudoin@free.fr>

	- Updated for windows release 7.4BETA2

	* config.h.mingw:
	* config.h.windows:
	* gcompris-installer.nsi:
	* src/boards/awele.c: (awele_destroy_all_items),
	(awele_create_item): huge memory leak fixed
	* src/boards/menu2.c: (menu_start): memory leak fixed. This one is probably
	  in many other boards.
	* src/gcompris/anim.c: (gcompris_load_animation): debug string change
	* src/gcompris/gameutil.c: (gcompris_board_has_activity): fixed to have
	  menu properly hidden if empty.

2006-03-29  Yves Combe  <yves@ycombe.net>

	fix string encoding for operators.

	* src/boards/memory.c: (start_board):

2006-03-29  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed cameroon image reference.
	- Better colorscheme for chess.
	- Now empty menu will no more be displayed.

	* boards/geography/board4_2.xml.in:
	* src/boards/chess.c: (chess_create_item), (move_piece_to),
	(hightlight_possible_moves):
	* src/gcompris/gameutil.c: (gcompris_board_has_activity),
	(gcompris_get_menulist):
	* src/gcompris/profile.c:

2006-03-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Now erase has 10 sublevels to let small children play longer at the same level
	Now sudoku has a new level 5x5 with numbers.
	Removed translation from assetml files because it's useless.

	* boards/sounds/Makefile.am:
	* boards/sounds/da/alphabet/gcompris_alphabet_da.assetml.in:
	* boards/sounds/da/colors/gcompris_colors_da.assetml.in:
	* boards/sounds/da/geography/gcompris_geography_da.assetml.in:
	* boards/sounds/da/misc/gcompris_misc_da.assetml.in: