@@ -1,3 +1,9 @@
+2006-03-31  Yves Combe  <yves@ycombe.net>
+
+	Stupid bug in substracion memory (typo).
+
+	* src/boards/memory.c: (get_random_token), (start_board):
+
 2006-03-30  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	- Fixes unexpected empty menu on windows (untested)
